<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="top|center"
        android:layout_margin="10dp"
        android:contentDescription="@string/avatar_description"
        android:src="@drawable/avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#77AACCEE"
            android:hint="@string/title_edit_text_hint"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/description"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#77AACCEE"
            android:drawablePadding="10dp"
            android:hint="@string/description_edit_text_hint"
            android:inputType="text"
            android:maxLength="90"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        android:background="#6200EE"
        android:text="@string/add_button"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</FrameLayout>